--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,10 @@
 iframe {
     border: 0px;
 }
+
+#train {
+    height:60px;
+    margin: 10px;
+    animation: App-logo-spin infinite 5s linear;
+
+}
